# mini-git

./: .gitignore  CMakeLists.txt  backtest.sh  needsAnalysisi
src/: blob.cpp  blob.h  checkout.cpp  checkout.h  commit.cpp  commit.h  filesystem.cpp  filesystem.h  hash.cpp  hash.h  index.cpp  index.h  main.cpp  object_store.cpp  object_store.h  pack.cpp  pack.h  refs.cpp  refs.h  tree.cpp  tree.h  zlib_utils.cpp  zlib_utils.h
tests/: test_checkout.cpp  test_commit.cpp  test_commit_from_index.cpp  test_hash.cpp  test_identity_env.cpp  test_index.cpp  test_merge.cpp  test_object_store.cpp  test_pack.cpp  test_refs.cpp  test_tree.cpp  test_zlib_utils.cpp
